// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders with correct props 1`] = `
<styled.button
  size="regular"
  theme="primary"
  type="submit"
>
  Click me
</styled.button>
`;

exports[`Button renders with correct props 2`] = `
<styled.button
  rounded={true}
  size="regular"
  theme="primary"
  type="submit"
>
  Click me
</styled.button>
`;

exports[`Button renders with correct props 3`] = `
<styled.button
  inverted={true}
  rounded={true}
  size="regular"
  theme="primary"
  type="submit"
>
  Click me
</styled.button>
`;

exports[`Button renders with correct props 4`] = `
<styled.button
  inverted={true}
  rounded={true}
  size="small"
  theme="primary"
  type="submit"
>
  Click me
</styled.button>
`;

exports[`Button renders with correct props 5`] = `
<styled.button
  inverted={true}
  rounded={true}
  size="large"
  theme="primary"
  type="submit"
>
  Click me
</styled.button>
`;

exports[`Button renders with correct props 6`] = `
<styled.button
  disabled={true}
  inverted={true}
  rounded={true}
  size="large"
  theme="primary"
  type="submit"
>
  Click me
</styled.button>
`;
